# video-magnet

./: Dockerfile  README.md  compose.yml  main.py  pyproject.toml
decorators/: __init__.py  exceptions.py
settings/: __init__.py  telegram.py
