[tool.poetry]
name = "video-magnet"
version = "0.1.0"
description = "Video Magnet is a system used to download videos from a bunch of websites"
authors = ["Khiem Doan"]
readme = "README.md"
packages = [{include = "video_magnet"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic =  {version = "1.10.9", extras = ["dotenv"]}
python-telegram-bot = "20.3"
yt-dlp = "2023.6.22"

[tool.poetry.group.dev.dependencies]
reloadium = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
isort = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
